<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="18dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/rlImage"
        android:layout_width="55dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo">


    </ImageView>

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/rlImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/liste_emailTV"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:text="@string/r_union_a" />

    <TextView
        android:id="@+id/Heure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/nameTV"
        app:layout_constraintBottom_toTopOf="@+id/liste_emailTV"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_goneMarginStart="10dp"
        android:text="@string/heure" />



    <TextView
        android:id="@+id/liste_emailTV"
        android:layout_width="250dp"
        android:layout_height="21dp"
        app:layout_constraintStart_toEndOf="@+id/rlImage"
        app:layout_constraintTop_toBottomOf="@+id/nameTV"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        tools:text="norzeuswin@gmail.com, herbert2@yahoo.com,gary3@gmail.com" />

    <TextView
        android:id="@+id/dirigePar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/Heure"
        app:layout_constraintBottom_toTopOf="@+id/liste_emailTV"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:text="@string/mc" />

    <ImageView
        android:id="@+id/image_Edit"
        android:layout_width="30sp"
        android:layout_height="30sp"
        app:layout_constraintTop_toBottomOf="@+id/image_Delete"
        app:layout_constraintStart_toEndOf="@+id/liste_emailTV"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_baseline_edit_24"
        android:contentDescription="@string/todo1" />



    <ImageView
        android:id="@+id/image_Delete"
        android:layout_width="30sp"
        android:layout_height="30sp"
        app:layout_constraintStart_toEndOf="@+id/liste_emailTV"
        app:layout_constraintBottom_toTopOf="@id/liste_emailTV"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_baseline_delete_24"
        android:contentDescription="@string/todo2" />


</android.support.constraint.ConstraintLayout>










